@startuml
!theme toy
skinparam classAttributeIconSize 0

package "by.andd3dfx.accessdecision.back" {
  abstract class AbstractAccessDecision<T> {
    +addGrant(message: String): void
    +addDeny(message: String): void
    +addReason(conditionFlag: boolean, universalReasonMessage: String): T
    +addReason(conditionFlag: boolean, positiveReasonMessage: String, negativeReasonMessage: String): T
    +isNotGranted(): boolean
    +getExceptionMessage(): String
    +getReasons(): List~Reason~
  }

  class ViewModeRightsAccessDecision
  class PermissionsAccessDecision
  class BusinessRuleRightsAccessDecision

  AbstractAccessDecision <|-- ViewModeRightsAccessDecision
  AbstractAccessDecision <|-- PermissionsAccessDecision
  AbstractAccessDecision <|-- BusinessRuleRightsAccessDecision

  class AccessDecisionFactory<T> {
    +create(): T
    +granted(messages: String...): T
    +denied(messages: String...): T
  }

  class AccessDecisions <<utility>> {
    {static} +VIEW_MODE_RIGHTS: AccessDecisionFactory~ViewModeRightsAccessDecision~
    {static} +PERMISSIONS: AccessDecisionFactory~PermissionsAccessDecision~
    {static} +BUSINESS_RULE_RIGHTS: AccessDecisionFactory~BusinessRuleRightsAccessDecision~
  }

  AccessDecisions ..> AccessDecisionFactory : holds

  record AccessDecisionVerdict {
    +viewModeRightsSupplier(): Supplier~ViewModeRightsAccessDecision~
    +permissionsSupplier(): Supplier~PermissionsAccessDecision~
    +businessRuleRightsSupplier(): Supplier~BusinessRuleRightsAccessDecision~
    +toActionState(): ActionVisibilityState
  }

  AccessDecisionVerdict *-- ViewModeRightsAccessDecision
  AccessDecisionVerdict *-- PermissionsAccessDecision
  AccessDecisionVerdict *-- BusinessRuleRightsAccessDecision

  abstract class AbstractJudge {
    +makeJudgement(verdict: AccessDecisionVerdict): void
    {abstract} #viewModeRightsViolated(exceptionMessage: String): void
    {abstract} #permissionsViolated(exceptionMessage: String): void
    {abstract} #businessRuleRightsViolated(exceptionMessage: String): void
  }

  AbstractJudge ..> AccessDecisionVerdict : makeJudgement()
}

package "by.andd3dfx.accessdecision.front" {
  enum VisibilityState {
    ENABLED
    DISABLED
    INVISIBLE
  }

  enum ReasonLayer {
    VIEW_MODE_RIGHTS
    PERMISSIONS
    BUSINESS_RULE_RIGHTS
  }

  enum ReasonType {
    POSITIVE
    NEGATIVE
  }

  record Reason {
    +layer(): ReasonLayer
    +type(): ReasonType
    +message(): String
    +isNegative(): boolean
  }

  Reason --> ReasonLayer
  Reason --> ReasonType

  record ActionVisibilityState {
    +state(): VisibilityState
    +reasons(): List~Reason~
    {static} +enabled(reasons: List~Reason~): ActionVisibilityState
    {static} +disabled(reasons: List~Reason~): ActionVisibilityState
    {static} +invisible(reasons: List~Reason~): ActionVisibilityState
  }

  ActionVisibilityState --> VisibilityState
  ActionVisibilityState --> Reason
}

AccessDecisionVerdict ..> ActionVisibilityState : toActionState()

note bottom of AbstractJudge
  Applications map denials to their own exceptions
  in the three *Violated hooks.
end note

@enduml
